# uniscrape

./: pyproject.toml  scrapy.cfg
chi/: items.py  langs.py  middlewares.py  pipelines.py  settings.py
chi/spiders/: uvigo.py
